@@ -8,6 +8,9 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.PriorityQueue;
 import java.util.Set;
+import java.util.function.BiPredicate;
+
+import org.apache.commons.lang3.mutable.MutableObject;
 
 import com.simibubi.create.content.logistics.trains.TrackEdge;
 import com.simibubi.create.content.logistics.trains.TrackGraph;
@@ -18,7 +21,6 @@ import com.simibubi.create.content.logistics.trains.management.GlobalStation;
 import com.simibubi.create.foundation.utility.Couple;
 import com.simibubi.create.foundation.utility.Pair;
 
-import net.minecraft.util.Mth;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
 
@@ -64,15 +66,7 @@ public class Navigation {
 
 		double brakingDistance = (train.speed * train.speed) / (2 * Train.acceleration);
 		train.targetSpeed = distanceToDestination > brakingDistance ? Train.topSpeed : 0;
-
-		if (Mth.equal(train.targetSpeed, train.speed))
-			return;
-
-		if (train.speed < train.targetSpeed)
-			train.speed = Math.min(train.speed + Train.acceleration, train.targetSpeed);
-		else if (train.speed > train.targetSpeed)
-			train.speed = Math.max(train.speed - Train.acceleration, train.targetSpeed);
-
+		train.approachTargetSpeed(1);
 	}
 
 	public boolean isActive() {
@@ -80,17 +74,20 @@ public class Navigation {
 	}
 
 	public ITrackSelector control(TravellingPoint mp) {
-		return (graph, list) -> {
+		if (destination == null)
+			return mp.steer(train.manualSteer, new Vec3(0, 1, 0));
+		return (graph, pair) -> {
 			if (!currentPath.isEmpty()) {
 				TrackEdge target = currentPath.get(0);
-				for (Entry<TrackNode, TrackEdge> entry : list) {
+				for (Entry<TrackNode, TrackEdge> entry : pair.getSecond()) {
 					if (entry.getValue() == target) {
 						currentPath.remove(0);
 						return entry;
 					}
 				}
 			}
-			return list.get(0);
+			return pair.getSecond()
+				.get(0);
 		};
 	}
 
@@ -122,7 +119,7 @@ public class Navigation {
 		if (this.destination == destination)
 			return 0;
 
-		train.leave();
+		train.leaveStation();
 		this.destination = destination;
 		return distanceToDestination;
 	}
@@ -130,19 +127,103 @@ public class Navigation {
 	private Pair<Double, List<TrackEdge>> findPathTo(GlobalStation destination) {
 		TrackGraph graph = train.graph;
 		List<TrackEdge> path = new ArrayList<>();
-		double distanceToDestination = 0;
 
 		if (graph == null)
 			return Pair.of(-1d, path);
 
 		Couple<TrackNodeLocation> target = destination.edgeLocation;
-		PriorityQueue<Pair<Double, Pair<Couple<TrackNode>, TrackEdge>>> frontier =
-			new PriorityQueue<>((p1, p2) -> Double.compare(p1.getFirst(), p2.getFirst()));
+		TravellingPoint leadingPoint = train.carriages.get(0)
+			.getLeadingPoint();
+		TrackEdge initialEdge = leadingPoint.edge;
+
+		MutableObject<Pair<Double, List<TrackEdge>>> result = new MutableObject<>(Pair.of(-1d, path));
+
+		search((reachedVia, poll) -> {
+			double distance = poll.getFirst();
+			Pair<Couple<TrackNode>, TrackEdge> currentEntry = poll.getSecond();
+			TrackEdge edge = currentEntry.getSecond();
+			TrackNode node1 = currentEntry.getFirst()
+				.getFirst();
+			TrackNode node2 = currentEntry.getFirst()
+				.getSecond();
+
+			TrackNodeLocation loc1 = node1.getLocation();
+			TrackNodeLocation loc2 = node2.getLocation();
+			if (!loc1.equals(target.getFirst()) || !loc2.equals(target.getSecond()))
+				return false;
+
+			Pair<Boolean, TrackEdge> backTrack = reachedVia.get(edge);
+			TrackEdge toReach = edge;
+			while (backTrack != null && toReach != initialEdge) {
+				if (backTrack.getFirst())
+					path.add(0, toReach);
+				toReach = backTrack.getSecond();
+				backTrack = reachedVia.get(backTrack.getSecond());
+			}
+
+			double distanceToDestination = distance;
+			double position = edge.getLength(node1, node2) - destination.position;
+			distanceToDestination -= position;
+			result.setValue(Pair.of(distanceToDestination, path));
+			return true;
+		}, Double.MAX_VALUE);
+
+		return result.getValue();
+	}
+
+	public GlobalStation findNearestApproachable() {
+		TrackGraph graph = train.graph;
+		if (graph == null)
+			return null;
+
+		MutableObject<GlobalStation> result = new MutableObject<>(null);
+		double minDistance = .75f * (train.speed * train.speed) / (2 * Train.acceleration);
+		double maxDistance = Math.max(32, 1.5f * (train.speed * train.speed) / (2 * Train.acceleration));
+
+		search((reachedVia, poll) -> {
+			double distance = poll.getFirst();
+			if (distance < minDistance)
+				return false;
+
+			Pair<Couple<TrackNode>, TrackEdge> currentEntry = poll.getSecond();
+			TrackEdge edge = currentEntry.getSecond();
+			TrackNode node1 = currentEntry.getFirst()
+				.getFirst();
+			TrackNode node2 = currentEntry.getFirst()
+				.getSecond();
+
+			for (GlobalStation globalStation : graph.getStations()) {
+				Couple<TrackNodeLocation> target = globalStation.edgeLocation;
+				TrackNodeLocation loc1 = node1.getLocation();
+				TrackNodeLocation loc2 = node2.getLocation();
+				if (!loc1.equals(target.getFirst()) || !loc2.equals(target.getSecond()))
+					continue;
+				double position = edge.getLength(node1, node2) - globalStation.position;
+				if (distance - position < minDistance)
+					continue;
+				result.setValue(globalStation);
+				return true;
+			}
+
+			return false;
+		}, maxDistance);
+
+		return result.getValue();
+	}
+
+	public void search(
+		BiPredicate<Map<TrackEdge, Pair<Boolean, TrackEdge>>, Pair<Double, Pair<Couple<TrackNode>, TrackEdge>>> condition,
+		double maxDistance) {
+		TrackGraph graph = train.graph;
+		if (graph == null)
+			return;
 
 		TravellingPoint leadingPoint = train.carriages.get(0)
 			.getLeadingPoint();
 		Set<TrackEdge> visited = new HashSet<>();
 		Map<TrackEdge, Pair<Boolean, TrackEdge>> reachedVia = new IdentityHashMap<>();
+		PriorityQueue<Pair<Double, Pair<Couple<TrackNode>, TrackEdge>>> frontier =
+			new PriorityQueue<>((p1, p2) -> Double.compare(p1.getFirst(), p2.getFirst()));
 
 		TrackEdge initialEdge = leadingPoint.edge;
 		TrackNode initialNode1 = leadingPoint.node1;
@@ -153,39 +234,19 @@ public class Navigation {
 		while (!frontier.isEmpty()) {
 			Pair<Double, Pair<Couple<TrackNode>, TrackEdge>> poll = frontier.poll();
 			double distance = poll.getFirst();
+			if (distance > maxDistance)
+				continue;
+
 			Pair<Couple<TrackNode>, TrackEdge> currentEntry = poll.getSecond();
-			List<Entry<TrackNode, TrackEdge>> validTargets = new ArrayList<>();
 			TrackEdge edge = currentEntry.getSecond();
 			TrackNode node1 = currentEntry.getFirst()
 				.getFirst();
 			TrackNode node2 = currentEntry.getFirst()
 				.getSecond();
+			if (condition.test(reachedVia, poll))
+				return;
 
-			TrackNodeLocation loc1 = node1.getLocation();
-			TrackNodeLocation loc2 = node2.getLocation();
-			boolean enteringBackward = loc2.equals(target.getFirst()) && loc1.equals(target.getSecond());
-			boolean enteringForward = loc1.equals(target.getFirst()) && loc2.equals(target.getSecond());
-
-			if (enteringForward || train.doubleEnded && enteringBackward) {
-				Pair<Boolean, TrackEdge> backTrack = reachedVia.get(edge);
-				TrackEdge toReach = edge;
-				while (backTrack != null && toReach != initialEdge) {
-					if (backTrack.getFirst())
-						path.add(0, toReach);
-					toReach = backTrack.getSecond();
-					backTrack = reachedVia.get(backTrack.getSecond());
-				}
-
-				distanceToDestination = distance;
-				double position = destination.position;
-				if (enteringForward)
-					position = edge.getLength(node1, node2) - position;
-				else
-					distanceToDestination += train.getTotalLength() + 2;
-				distanceToDestination -= position;
-				return Pair.of(distanceToDestination, path);
-			}
-
+			List<Entry<TrackNode, TrackEdge>> validTargets = new ArrayList<>();
 			for (Entry<TrackNode, TrackEdge> entry : graph.getConnectionsFrom(node2)
 				.entrySet()) {
 				TrackNode newNode = entry.getKey();
@@ -210,8 +271,6 @@ public class Navigation {
 					Pair.of(Couple.create(node2, newNode), newEdge)));
 			}
 		}
-
-		return Pair.of(-1d, path);
 	}
 
 }
